[package]
name = "lanchanto"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10.1"
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
hmac = "0.12.1"
once_cell = "1.21.3"
reqwest = "0.12.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
toml = "0.9.2"
warp = "0.3.7"
