[package]
name = "lanchanto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.12"
clap = { version = "4.6", features = ["derive"] }
hex = "0.4.3"
hmac = "0.13"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tempfile = "3.27"
tokio = { version = "1.52", features = ["full"] }
toml = "1.1"
warp = { version = "0.4", features = ["server"] }
zip = "8.6"
